--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,36 +1,10 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-body {
-	//scroll-behavior: smooth; //replace in js
-}
-body {
-	background-color: rgb(11, 11, 11);
-	section {
-		border-bottom: 1px solid rgb(95, 61, 33);
-	}
-}
-li {
-	list-style-type: none; /* Remove bullets */
-	cursor: pointer;
-}
-.break {
-	flex-basis: 100%;
-	height: 0 !important;
-}
-/*.loader {
-	width: 100vw;
-	height: 100vh;
-	background-color: black;
-}*/
-
-/*-------------------- MIXINS --------------------*/
-@mixin flex {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-}
+@import "./styleAdd.scss";
+@import "./__partials/__beans.scss";
+@import "./__partials/__cafe.scss";
+@import "./__partials/__contact.scss";
+@import "./__partials/__events.scss";
+@import "./__partials/__footer.scss";
+@import "./__partials/__header.scss";
+@import "./__partials/__slider.scss";
+@import "./__modules/__animation.scss";
+@import "./__modules/__media.scss";
