add loading sign

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,3 +8,4 @@
 @import "./__partials/__slider.scss";
 @import "./__modules/__animation.scss";
 @import "./__modules/__media.scss";
+@import "./__modules/_loadingSign";
